# pyweb-hw-05

./: .gitignore  README.md  main.py  pyproject.toml  server_kuchma.py
