[tool.poetry]
name = "pyweb-hw-05"
version = "0.1.0"
description = ""
authors = ["Spica12 <vitaly.savenko12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiopath = "0.6.11"
aiohttp = "^3.9.0"
aiofile = "^3.8.8"
websockets = "^12.0"
names = "^0.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
